# gandi-2-terraform

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  taskfile.yml
.github/: dependabot.yml  release.yml
.github/workflows/: main.yml  release.yml
gandi_tf/: __init__.py  main.py
tests/: test_gandi_tf.py
