[tool.poetry]
name = "gandi-2-terraform"
version = "1.3.3"
description = "CLI to read Gandi.net live DNS records and generate corresponding TF gandi_livedns_record resources"
readme = 'README.md'
license = "AGPL"
authors = ["Marc-Aurèle Brothier <m@brothier.org>"]
packages = [
  { include = "gandi_tf" },
]
repository = "https://github.com/marcaurele/gandi-2-terraform"
homepage = "https://github.com/marcaurele/gandi-2-terraform"
keywords = ['gandi', 'terraform', 'DNS']
classifiers = [
  "Topic :: Internet :: Name Service (DNS)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.27.1"
click = "^8.0.3"

[tool.poetry.scripts]
gandi2tf = "gandi_tf.main:generate"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/marcaurele/gandi-2-terraform/issues"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2,<9.0.0"
black = ">=23.3,<25.0"
flake8-import-order = "^0.18.2"
pylint = ">=2.17.1,<4.0.0"
mypy = "^1.1.1"
ruff = ">=0.5.0,<0.6.9"

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312"]
line-length = 119

[tool.pylint]
max-line-length = 119

[tool.isort]
line_length = 119

[tool.mypy]
non_interactive = true
install_types = true

[tool.ruff]
lint.select = ["E", "F"]
line-length = 119
target-version = "py38"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
